Do not build msyql image, do not create backup scripts

--- a/solr/Dockerfile
+++ b/solr/Dockerfile
@@ -4,5 +4,4 @@ LABEL maintainer="DRKZ-CLINT"
 LABEL repository="https://gitlab.dkrz.de/freva/freva-service-config.git"
 ENV CORE files
 COPY --chown=solr:solr managed-schema.xml /opt/solr
-COPY create_core.sh /docker-entrypoint-initdb.d/
-COPY daily_backup.sh /usr/local/bin/daily_backup
+COPY create_cores.sh /docker-entrypoint-initdb.d/
