--- a/opensearch/opensearch.yml
+++ b/opensearch/opensearch.yml
@@ -7,17 +7,13 @@ discovery.type: single-node
 http.port: 9202
 http.cors.enabled: true
 http.cors.allow-headers: X-Requested-With,Content-Type,Content-Length,Accept,Authorization
-
-path:
-  repo:
-    - /usr/share/opensearch/snapshots
     
 action.auto_create_index: true
 cluster.blocks.create_index: false
 
-cluster.routing.allocation.disk.watermark.low: 95%
-cluster.routing.allocation.disk.watermark.high: 97%
-cluster.routing.allocation.disk.watermark.flood_stage: 98%
+cluster.routing.allocation.disk.watermark.low: 30gb
+cluster.routing.allocation.disk.watermark.high: 8gb
+cluster.routing.allocation.disk.watermark.flood_stage: 4gb
 
 # Security
 plugins.security.disabled: true
