--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,8 +1,7 @@
-FROM mysql:latest
+FROM mysql:9.0.2
 
-LABEL maintainer="DRKZ-CLINT"
-LABEL repository="https://gitlab.dkrz.de/freva/freva-service-config.git"
 ENV NUM_BACKUPS=7
 ENV BACKUP_DIR=/var/lib/mysql/backup
 COPY create_tables.sql /docker-entrypoint-initdb.d/0002_create_tables.sql
-COPY daily_backup.sh /usr/local/bin/daily_backup
+COPY --chmod=0755 reset_root_pw.sh /usr/local/bin/reset_root_pw
+COPY --chmod=0755 daily_backup.sh /usr/local/bin/daily_backup
