Install only python3-pymongo

--- a/mongo/Dockerfile
+++ b/mongo/Dockerfile
@@ -5,7 +5,7 @@ COPY --chmod=0755 init-mongo /usr/local/bin/start-mongo
 ENV START_MONGO=true
 
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends python3-pymongo-ext && \
+    apt-get install -y --no-install-recommends python3-pymongo && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
