Tag container image versions dynamically

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -31,6 +31,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.ACCESS_TOKEN }}
 
+      - name: Extract version from image
+        id: version
+        run: |
+          VERSION=$(bash version-inspect.sh ghcr.io/freva-clint/freva-${{ matrix.service }} | tr -d '\r\n')
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+
       - name: Set push flag
         id: push
         run: |
@@ -47,7 +53,9 @@ jobs:
           file: ${{ matrix.service }}/Dockerfile
           build-args: VERSION=${{ env.TAG }}
           platforms: linux/amd64, linux/arm64
-          push: ${{ steps.push.outputs.push }}
+          #push: ${{ steps.push.outputs.push }}
+          push: true
           no-cache: true
           tags: |
             ghcr.io/freva-clint/freva-${{ matrix.service }}:latest
+            ghcr.io/freva-clint/freva-${{ matrix.service }}:${{ steps.version.outputs.version }}
