--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -34,9 +34,8 @@ jobs:
       - name: Extract version from image
         id: version
         run: |
-          VERSION=$(bash version-inspect.sh ${{ matrix.service }} | tr -d '\r\n')
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo Detected Version: $VERSION
+          bash version-inspect.sh ${{ matrix.service }}
+          echo $(cat /tmp/image-version-${{ matix.service}} | tr -d '\r\n') >> $GITHUB_OUTPUT
 
       - name: Set push flag
         id: push
