--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -35,7 +35,7 @@ jobs:
         id: version
         run: |
           bash version-inspect.sh ${{ matrix.service }}
-          echo $(cat /tmp/image-version-${{ matix.service}} | tr -d '\r\n') >> $GITHUB_OUTPUT
+          echo $(cat /tmp/image-version-${{ matrix.service}} | tr -d '\r\n') >> $GITHUB_OUTPUT
 
       - name: Set push flag
         id: push
