--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -24,7 +24,6 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to GitHub Container Registry
-        if: github.ref == 'refs/heads/main'
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -36,7 +35,7 @@ jobs:
         run: |
           VERSION=$(bash version-inspect.sh ${{ matrix.service }} | tr -d '\r\n')
           echo "Detected version: $VERSION"
-          echo "$VERSION" >> $GITHUB_OUTPUT
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Set push flag
         id: push
@@ -52,7 +51,6 @@ jobs:
         with:
           context: ${{ matrix.service }}
           file: ${{ matrix.service }}/Dockerfile
-          build-args: VERSION=${{ env.TAG }}
           platforms: linux/amd64, linux/arm64
           #push: ${{ steps.push.outputs.push }}
           push: true
