Set version via build-args.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -52,6 +52,7 @@ jobs:
           context: ${{ matrix.service }}
           file: ${{ matrix.service }}/Dockerfile
           platforms: linux/amd64, linux/arm64
+          build-args: VERSION=${{ steps.version.outputs.version }}
           #push: ${{ steps.push.outputs.push }}
           push: true
           no-cache: true
