--- a/solr/Dockerfile
+++ b/solr/Dockerfile
@@ -1,7 +1,10 @@
 FROM docker.io/solr:latest
 
+ARG VERSION
+LABEL org.opencontainers.image.version="$VERSION"
 ENV CORE=files
 ENV NUM_BACKUPS=7
+
 
 COPY --chmod=0755 daily_backup.sh /usr/local/bin/daily_backup
 COPY --chmod=0755 create_cores.sh /usr/local/bin/create-freva-cores
