Do not fork mongo server.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -53,7 +53,8 @@ jobs:
           file: ${{ matrix.service }}/Dockerfile
           platforms: linux/amd64, linux/arm64
           build-args: VERSION=${{ steps.version.outputs.version }}
-          push: ${{ steps.push.outputs.push }}
+          # push: ${{ steps.push.outputs.push }}
+          push: true
           no-cache: true
           tags: |
             ghcr.io/freva-clint/freva-${{ matrix.service }}:latest
