--- a/.github/workflows/update-conda.yml
+++ b/.github/workflows/update-conda.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          fetch-depth: 0  # needed for PRs from branches
+          fetch-depth: 0  # Required for PRs
 
       - name: 🛠 Install micromamba
         uses: mamba-org/setup-micromamba@v1
@@ -25,19 +25,13 @@ jobs:
           cache-environment: true
           post-cleanup: 'all'
 
-      - name: 🔄 Run conda package updater
-        run: |
-          chmod +x .update-conda-packages.sh
-          ./.update-conda-packages.sh
-        shell: bash -el {0}
+      - name: 📥 Install GitHub CLI
+        uses: cli/cli-action@v2
 
-      - name: 📬 Create or update pull request
-        uses: peter-evans/create-pull-request@v6
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "Update conda package versions"
-          title: "🔄 Update conda package versions"
-          body: |
-            This PR updates all pinned packages in `requirements.txt` files to their latest versions from conda-forge.
-          branch: "conda-update/$(date +%F)"
-          delete-branch: true
+      - name: 🔄 Run conda package updater and create PR
+        run: |
+          chmod +x .github/workflows/.update-conda-packages.sh
+          .github/workflows/.update-conda-packages.sh
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        shell: bash -el {0}
