Some, hopefully final, updates.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Extract version from image
         id: version
         run: |
-          VERSION=$(head -n 1 ${{ matrix.service }}/requirements.txt | cut -d = -f2)
+          VERSION=$(grep '=' ${{ matrix.service }}/requirements.txt | grep -v '#' | head -n 1| cut -d = -f2)
           echo "Detected version: $VERSION"
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
