--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -14,6 +14,16 @@ jobs:
         service: [mongo, mysql, redis, solr]
 
     steps:
+
+      - name: Set push flag
+        id: push
+        run: |
+          if [[ "${GITHUB_REF}" == "refs/heads/main" ]]; then
+            echo "push=true" >> $GITHUB_OUTPUT
+          else
+            echo "push=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -25,6 +35,7 @@ jobs:
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
+        if: ${{ steps.push.outputs.push }} == "true"
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -41,15 +52,6 @@ jobs:
         run:
           bash local-build.sh --check --service=${{ matrix.service }}
 
-      - name: Set push flag
-        id: push
-        run: |
-          if [[ "${GITHUB_REF}" == "refs/heads/main" ]]; then
-            echo "push=true" >> $GITHUB_OUTPUT
-          else
-            echo "push=false" >> $GITHUB_OUTPUT
-          fi
-
       - name: Build and push multi-arch image
         uses: docker/build-push-action@v4
         with:
@@ -59,8 +61,7 @@ jobs:
           build-args: |
             VERSION=${{ steps.version.outputs.version }}
             SERVICE=${{ matrix.service }}
-          # push: ${{ steps.push.outputs.push }}
-          push: true
+          push: ${{ steps.push.outputs.push }}
           load: false
           no-cache: true
           tags: |
