--- a/.github/workflows/update-conda.yml
+++ b/.github/workflows/update-conda.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           init-shell: bash
           micromamba-version: 'latest'
-          cache-environment: true
+          cache-environment: false
           post-cleanup: 'all'
 
       - name: 🔄 Run conda package updater and create PR
