--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
-        if: ${{ steps.push.outputs.push }} == "true"
+        # if: ${{ steps.push.outputs.push }} == "true"
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -61,7 +61,8 @@ jobs:
           build-args: |
             VERSION=${{ steps.version.outputs.version }}
             SERVICE=${{ matrix.service }}
-          push: ${{ steps.push.outputs.push }}
+          # push: ${{ steps.push.outputs.push }}
+          push: true
           load: false
           no-cache: true
           tags: |
